--- a/holamundo.html
+++ b/holamundo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html>    
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +9,6 @@
     <script src="main.js"></script>
 </head>
 <body>
-    hola mundo
+    hola mundo 2 3
 </body>
 </html>
